# xfinity-adk-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  globals.py  main.py  pyproject.toml  requirements.txt
agents/root/: customer_support_agent.py
agents/sub/: billing_agent.py  faq_support_agent.py  outage_agent.py  user_identification_agent.py
api/controller/: agent_controller.py
api/helper/: agent_helper.py
api/router/: agent_router.py
api/schema/: agent_schema.py  session_schema.py
api/service/: agent_service.py
background_tasks/: memory_manager.py
callbacks/: callback_listeners.py
guardrails/: modelarmorutils.py  sanitizer.py
tools/: billing_tool.py  claim_tools.py  user_identification_tool.py
utils/: adkrunnerutils.py  datastoreutils.py  modelarmorutils.py  vertextaiutils.py
