[project]
name = "adk-visual-builder-agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "google-adk[a2a]>=1.20.0",
    "google-cloud>=0.34.0",
    "google-cloud-modelarmor>=0.3.0",
    "openpyxl>=3.1.5",
]
